; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_tbar.c_LastButtonIsSeparator.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_tbar.c_LastButtonIsSeparator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@TB_BUTTONCOUNT = common dso_local global i32 0, align 4
@TB_GETBUTTON = common dso_local global i32 0, align 4
@TBSTYLE_SEP = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LastButtonIsSeparator(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_2__, align 4
  %4 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @TB_BUTTONCOUNT, align 4
  %7 = call i32 @SendMessage(i32 %5, i32 %6, i64 0, i64 0)
  %8 = sext i32 %7 to i64
  store i64 %8, i64* %4, align 8
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @TB_GETBUTTON, align 4
  %11 = load i64, i64* %4, align 8
  %12 = sub nsw i64 %11, 1
  %13 = ptrtoint %struct.TYPE_2__* %3 to i64
  %14 = call i32 @SendMessage(i32 %9, i32 %10, i64 %12, i64 %13)
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @TBSTYLE_SEP, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %1
  %21 = load i32, i32* @TRUE, align 4
  br label %24

22:                                               ; preds = %1
  %23 = load i32, i32* @FALSE, align 4
  br label %24

24:                                               ; preds = %22, %20
  %25 = phi i32 [ %21, %20 ], [ %23, %22 ]
  ret i32 %25
}

declare dso_local i32 @SendMessage(i32, i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
